# ElectronNeutrinoSelection

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  config  doxyConf
ElectronNeutrinoSelection/: EnergyHelper.cxx  GeometryHelper.h  HelperBase.h  PandoraInterfaceHelper.h
ElectronNeutrinoSelection/job/: run_PandoraOnly.fcl  run_PandoraOnly_data_extbnb.fcl  run_PandoraOnly_intime.fcl  run_PandoraOnly_overlaid.fcl
electronNeutrinoSelection/: CMakeLists.txt  ElectronEventSelectionAlg.cxx  ElectronEventSelectionAlg.h  ElectronNeutrinoFilter.h  ElectronNeutrinoFilter_module.cc  EnergyHelper.cxx  EnergyHelper.h  GeometryHelper.cxx  GeometryHelper.h  PandoraInterfaceHelper.cxx  PandoraInterfaceHelper.h  PandoraLEEAnalyzer.h  PandoraLEEAnalyzer_module.cc
electronNeutrinoSelection/job/: lee_selection_alg.fcl  numi_dirt_test_list.txt  numi_dirt_test_list_v2.txt  numi_dirt_test_list_v2v3_merged.txt  numi_dirt_test_list_v3.txt  numu_nue_common_eventweight.fcl  pandora_lee_ana_common.fcl  run_PandoraOnly.fcl  run_PandoraOnly_data_bnb.fcl  run_PandoraOnly_data_bnb_newcrhit.fcl  run_PandoraOnly_data_extbnb.fcl  run_PandoraOnly_data_extbnb_newcrhit.fcl  run_PandoraOnly_data_extnumi.fcl  run_PandoraOnly_data_numi.fcl  run_PandoraOnly_data_numi_first_16us.fcl  run_PandoraOnly_dataext_numi.fcl  run_PandoraOnly_dataext_numi_first_16us.fcl  run_PandoraOnly_detsyst.fcl  run_PandoraOnly_lee.fcl  run_PandoraOnly_mc_bnb.fcl  run_PandoraOnly_mc_dirt_numi.fcl  run_PandoraOnly_mc_filter_numi.fcl  run_PandoraOnly_mc_nofilter_numi.fcl  run_PandoraOnly_mc_nue_bnb.fcl  run_PandoraOnly_mc_numi.fcl  run_PandoraOnly_mc_numi_first_16us.fcl  run_PandoraOnly_newcrhit.fcl  run_PandoraOnly_overlaid.fcl  run_PandoraOnly_overlaid_as_data.fcl
electronNeutrinoSelection/job/old/: run_PandoraOnly_data_bnb.fcl  run_PandoraOnly_detsyst.fcl  run_PandoraOnly_mc_filter_numi.fcl
html/: ElectronEventSelectionAlg_8h_source.html  ElectronNeutrinoFilter_8h_source.html  EnergyHelper_8h_source.html  GeometryHelper_8h_source.html  HelperBase_8h_source.html  PandoraInterfaceHelper_8h_source.html  PandoraLEEAnalyzer_8h_source.html  annotated.html  classElectronEventSelectionAlg.html  classEnergyHelper.html  classGeometryHelper.html  classPandoraInterfaceHelper.html  classPandoraLEEAnalyzer.html  classes.html  classlee_1_1ElectronEventSelectionAlg-members.html  classlee_1_1ElectronEventSelectionAlg.html  classlee_1_1ElectronNeutrinoFilter-members.html  classlee_1_1ElectronNeutrinoFilter.html  classlee_1_1EnergyHelper-members.html  classlee_1_1EnergyHelper.html  classlee_1_1GeometryHelper-members.html  classlee_1_1GeometryHelper.html  classlee_1_1HelperBase-members.html  classlee_1_1HelperBase.html  classlee_1_1PandoraInterfaceHelper-members.html  classlee_1_1PandoraInterfaceHelper.html  classlee_1_1PandoraLEEAnalyzer-members.html  classlee_1_1PandoraLEEAnalyzer.html  dir_1f24a036040cd0aa92d601d48eef9511.html  files.html  functions.html  functions_func.html  functions_vars.html  group__lee.html  hierarchy.html  index.html  modules.html
html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_f.js  classes_0.js  classes_1.js  classes_3.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  groups_0.js  search.js
latex/: annotated.tex  classElectronEventSelectionAlg.tex  classEnergyHelper.tex  classGeometryHelper.tex  classPandoraInterfaceHelper.tex  classPandoraLEEAnalyzer.tex  classlee_1_1ElectronEventSelectionAlg.tex  classlee_1_1ElectronNeutrinoFilter.eps  classlee_1_1ElectronNeutrinoFilter.tex  classlee_1_1EnergyHelper.eps  classlee_1_1EnergyHelper.tex  classlee_1_1GeometryHelper.eps  classlee_1_1GeometryHelper.tex  classlee_1_1HelperBase.eps  classlee_1_1HelperBase.tex  classlee_1_1PandoraInterfaceHelper.eps  classlee_1_1PandoraInterfaceHelper.tex  classlee_1_1PandoraLEEAnalyzer.eps  classlee_1_1PandoraLEEAnalyzer.tex  dir_1f24a036040cd0aa92d601d48eef9511.tex  group__lee.tex  hierarchy.tex  modules.tex  refman.tex
pandoraElectronFilter/: ElectronEventSelectionAlg.h  GeometryHelper.cxx
ups/: product_deps  product_deps.bak  product_deps~
xml/: bnb_mc_electron_neutrino_selection.xml  bnb_mc_nue_electron_neutrino_selection.xml  bnbnue_mc_electron_neutrino_selection.xml  numi_data1_electron_neutrino_selection.xml  numi_data1_first_16us_electron_neutrino_selection.xml  numi_data2_electron_neutrino_selection.xml  numi_data_electron_neutrino_selection.xml  numi_dataext1_electron_neutrino_selection.xml  numi_dataext1_first_16us_electron_neutrino_selection.xml  numi_dataext2_electron_neutrino_selection.xml  numi_dataext_electron_neutrino_selection.xml  numi_mc_dirt_electron_neutrino_selection.xml  numi_mc_electron_neutrino_selection.xml  numi_mc_first_16us_electron_neutrino_selection.xml  numi_mc_nofilter_electron_neutrino_selection.xml  process_cosmic_in_time_pandora_electron_filter.xml  process_dirt_pandora_electron_filter.xml  process_lee.xml  process_mc_numi_pandora_electron_filter.xml  process_mc_numi_pandora_electron_filter_old.xml  process_nu_cosmic_pandora_electron_filter.xml  process_nu_cosmic_pandora_electron_filter_detsyst.xml  process_nu_cosmic_pandora_electron_filter_detsyst_datasce.xml  process_nu_cosmic_pandora_electron_filter_detsyst_dic.xml  process_nu_cosmic_pandora_electron_filter_detsyst_larg4fix.xml  process_nue_cosmic_pandora_electron_filter.xml  process_open_bnb_pandora_electron_filter_v4s.xml  process_open_bnb_pandora_electron_filter_v4s_numu.xml  process_open_bnb_pandora_electron_filter_v5s.xml  process_open_bnbext_pandora_electron_filter_v4s.xml  process_open_bnbext_pandora_electron_filter_v5s.xml  process_open_bnbext_pandora_electron_filter_v5s_numu.xml  process_open_numi_pandora_electron_filter_v1.xml  process_open_numiext_pandora_electron_filter_v1.xml  process_overlay.xml  process_overlay_as_data.xml
xml/det_sys_xml/: birks.xml  cv.xml  (+11 more)
(+14 files in other folders)
